@@ -22,7 +22,11 @@ Release 0.19.1 - Unreleased
                to compact when loaded with hundreds of regions
    HBASE-1247  checkAndSave doesn't Write Ahead Log
    HBASE-1243  oldlogfile.dat is screwed, so is it's region
-   HBASE-1169  When a shutdown is requested, stop scanning META regions immediately
+   HBASE-1169  When a shutdown is requested, stop scanning META regions
+               immediately
+   HBASE-1219  Scanners can miss values riding the flush transition
+   HBASE-1220  Don't reopen file if already open when updating readers
+               underneath scanners
 
 
   IMPROVEMENTS
